# skit

./: .gitignore  GNUmakefile  Makefile.global.in  NOTES  TODO  configure  configure.ac  configure.in  dependency_resolution.dia  skit.1
dbscript/: Makefile  mkdb.sh  postgresql.conf  testdb.sh  testdb.sql
doc/: GNUmakefile  Makefile  docbookfiles.sgml  extract_usage.sh  skit.sgml  skit.xml  skit_customlayer.xsl  skit_docbook.css  skit_docbook.css.xml  skit_usage.xml  stylesheet_man.xsl  version.xml
doc/html/: apa.html  ch01.html  index.html  pr01.html  pt01.html
doc/src/: architecture.xml  building.xml  compatibility.xml  dev_intro.xml  feedback.xml  installation.xml  intro.sgml  intro.xml  man.xml  man_entities.sgml  overview.xml  policy.xml  roadmap.xml  usage.xml  whatis.sgml  whatis.xml
regress/: GNUmakefile  Makefile  diffcheck.sh  diffdump.sh  diffxml.sh  drop_cluster_objects.sql  errcheck.sh  regress_run.sh  regression1.sql  regression1_8_3.sql  regression1_8_4.sql  regression1_9_0.sql  regression1_9_1.sql  regression1_9_2.sql  regression1_9_3.sql  regression1_9_4.sql  regression2_8_4.sql  regression2_9_0.sql  regression2_9_2.sql  regression3_8_4_allowed_diffs  regression3_8_4_allowed_diffs2  regression3a_8_3.sql  regression3a_8_4.sql  regression3a_9_0.sql  regression3a_9_1.sql  regression3a_9_2.sql  regression3a_9_3.sql  regression3a_9_4.sql  regression3b_8_3.sql  regression3b_8_4.sql  regression3b_9_0.sql  regression3b_9_1.sql  regression3b_9_2.sql  regression3b_9_3.sql  regression3b_9_4.sql  regression4a_8_4.sql  regression4b_8_4.sql  regression4b_9_1.sql  regression_ignore2.txt  regression_ignore3.txt  (+2 more)
regress/extensions/: skit_test--1.0--2.0.sql  skit_test--1.0.sql  skit_test--2.0--1.0.sql  skit_test--2.0.sql  skit_test.control
src/: GNUmakefile  Makefile  action.c  builtin_symbols.c  deps.c  diff.c  exceptions.c  exceptions.h  filepath.c  libxslt.c  mem.c  navigation.c  options.c  params.c  pgsql.c  regexp.c  skit.c  skit.h  skit_config.h  skit_config.h.in  skit_lib.h  skit_param.h  skit_param.td  sql.c  sql.h  system.c  tmp  tsort.c  tsort2.c  utils.c  xmlfile.c
src/objects/: GNUmakefile  Makefile  cons.c  document.c  hash.c  object.c  optionlist.c  parser.c  string.c  symbol.c  vector.c
templates/: GNUmakefile  add_deps.xml  add_deps.xsl  connect.xml  diff.xml  extract.xml  generate.xml  list.xml  rm_deps.xsl  scatter.xml  template.rng  template.xml  usage_adddeps.txt  usage_dbtype.txt  usage_diff.txt  usage_extract.txt  usage_generate.txt  usage_list.txt  usage_print.txt  usage_scatter.txt  usage_synopsis.txt  usage_template.txt  usage_usage.txt  usage_version.txt
templates/postgres/: add_deps.xsl  extract.xml  list.xsl  post_diff.xsl  rm_deps.xsl  version.sql
templates/postgres/8.3/: ddl.xsl  diffrules.xml  navigation.xsl  prescatter.xsl  scatter.xsl
templates/postgres/8.3/ddl/: aggregates.xsl  casts.xsl  cluster.xsl  comments.xsl  constraints.xsl  conversions.xsl  database.xsl  domains.xsl  fallback.xsl  foreign_keys.xsl  functions.xsl  grants.xsl  indices.xsl  languages.xsl  operator_classes.xsl  operator_families.xsl  operators.xsl  owner.xsl  roles.xsl  rules.xsl  schemata.xsl  sequences.xsl  tables.xsl  tablespace.xsl  triggers.xsl  types.xsl  views.xsl
templates/postgres/8.3/diff/: conversions.xml  database.xml  functions.xml  grants.xml  languages.xml  roles.xml  schema.xml  schemata.xml  tablespaces.xml
templates/postgres/8.3/extract/: aggregates.xml  alltypes.xml  basetypes.xml  casts.xml  cluster.xml  comptypes.xml  conversions.xml  database.xml  domains.xml  enums.xml  function_sigs.xml  functions.xml  languages.xml  operator_classes.xml  operator_families.xml  operators.xml  roles.xml  rules.xml  schema.xml  sequences.xml  tables.xml  tablespaces.xml  triggers.xml  views.xml
templates/postgres/8.3/sql/: aggregates.sql  alltypes.sql  basetypes.sql  casts.sql  coldeps.sql  columns.sql  comptypes.sql  dbinfo.sql  enums.sql  functions.sql  getdeps.sql  indices.sql  languages.sql  opclass_funcs.sql  opclass_opers.sql  operator_classes.sql  operator_families.sql  operators.sql  roles.sql  rules.sql  schemata.sql  seqdeps.sql  sequence_cols.sql  sequences.sql  table_constraints.sql  tables.sql  tbs.sql  type_columns.sql  views.sql
templates/postgres/8.4/: common_defs.xsl  ddl.xsl  diffrules.xml  navigation.xsl  prescatter.xsl  reserved_words.txt  scatter.xsl
templates/postgres/8.4/ddl/: GNUmakefile  aggregates.xsl  casts.xsl  cluster.xsl  columns.xsl  comments.xsl  constraints.xsl  conversions.xsl  database.xsl  domains.xsl  fallback.xsl  fdws.xsl  feedback.xsl  foreign_servers.xsl  functions.xsl  grants.xsl  indices.xsl  languages.xsl  operator_classes.xsl  operator_families.xsl  operators.xsl  roles.xsl  rules.xsl  schemata.xsl  sequences.xsl  tables.xsl  tablespace.xsl  triggers.xsl  ts_dicts.xsl  ts_parsers.xsl  ts_templates.xsl  tsconfig_mappings.xsl  (+4 more)
templates/postgres/9.1/: ddl.xsl  navigation.xsl
templates/postgres/9.3/: ddl.xsl
test/: GNUmakefile  Makefile  capture.c  check_deps.c  check_except.c  check_filepath.c  check_main.c  check_object.c  check_options.c  check_params.c  check_relaxng.c  check_tsort.c  check_xmlfile.c  constraint.sql  database.sql  dbtools.sh  domain.sql  language.sql  redirect.c  roles.sql  schema.sql  suites.h  tablespace.sql  testdata.c  testdb.sql  users.sql  version.sql
test/data/: GNUmakefile  Makefile  cond_test.xml  cond_test_with_deps.xml  depdiffs_1a.sql  depdiffs_1b.sql  depdiffs_drop.sh  deps_simple.xml  depset_simple.xml  diffs_1_a.xml  diffs_1_b.xml  diffstream1.xml  fallback.xml  gendiffs_1a.sql  gendiffs_1b.sql  gensource1.xml  gensource2.xml  gensource3.xml  gensource_depset.xml  gensource_depset_rebuild.xml  gensource_diff.xml  gensource_fallback.xml  gensource_fromdia.xml  superuser_bug.xml
test/templates/: add_deps.xml  add_deps.xsl  include.xml  inclusion.xml  multiple.xml  noname.xml  noname2.xml  unknowntype.xml  valandd.xml
test/testfiles/: x.xml
valgrind/: alltests  glib_hash_suppressions  libpq_suppressions  libxml2_suppressions  make_suppression  run_valgrind
(+211 files in other folders)
