#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
m4_define([THIS_SKIT_VERSION],
   esyscmd([grep 'SKIT_VERSION ' src/skit_config.h.in | \
            cut -d\" -f2 | tr -d '\n']))

AC_INIT(Skit, THIS_SKIT_VERSION, skit-general@pgfoundry.org)
AC_CONFIG_SRCDIR([test/check_filepath.c])
AC_CONFIG_HEADER([src/skit_config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB(xslt, xsltCompilePattern)
AC_CHECK_LIB(xml2, xmlGetProp)
AC_CHECK_LIB(glib2, g_hash_table_lookup_extended)


# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h string.h unistd.h ])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([dup2 memmove memset regcomp strchr strcspn strpbrk])

AC_DEFUN(PKG_CHECK_MODULES, [
  succeeded=no

  if test -z "$PKG_CONFIG"; then
    AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
  fi

  if test "$PKG_CONFIG" = "no" ; then
     echo "*** The pkg-config script could not be found. Make sure it is"
     echo "*** in your path, or set the PKG_CONFIG environment variable"
     echo "*** to the full path to pkg-config."
     echo "*** Or see http://www.freedesktop.org/software/pkgconfig to get
pkg-config."
  else
     PKG_CONFIG_MIN_VERSION=0.9.0
     if $PKG_CONFIG --atleast-pkgconfig-version $PKG_CONFIG_MIN_VERSION; then
        AC_MSG_CHECKING(for $2)

        if $PKG_CONFIG --exists "$2" ; then
            AC_MSG_RESULT(yes)
            succeeded=yes

            AC_MSG_CHECKING($1_CFLAGS)
            $1_CFLAGS=`$PKG_CONFIG --cflags "$2"`
            AC_MSG_RESULT($$1_CFLAGS)

            AC_MSG_CHECKING($1_LIBS)
            $1_LIBS=`$PKG_CONFIG --libs "$2"`
            AC_MSG_RESULT($$1_LIBS)
        else
            $1_CFLAGS=""
            $1_LIBS=""
            AC_MSG_RESULT([no])
        fi

        AC_SUBST($1_CFLAGS)
        AC_SUBST($1_LIBS)
     else
        echo "*** Your version of pkg-config is too old. You need version
$PKG_CONFIG_MIN_VERSION or newer."
        echo "*** See http://www.freedesktop.org/software/pkgconfig";
     fi
  fi

  if test $succeeded = yes; then
     ifelse([$3], , :, [$3])
  else
     ifelse([$4], , AC_MSG_ERROR([Library requirements ($2) not met; consider
adjusting the PKG_CONFIG_PATH environment variable if your libraries are in a
nonstandard prefix so pkg-config can find them.]), [$4])
  fi
])



# Checks for libpq and libpq-fe.h, sets variables if found.
AC_DEFUN(POSTGRESQL_CHECKS, [
        AC_SUBST(PQINCPATH)
        AC_SUBST(PQLIB)

echo Checking if PostgreSQL is available

dnl Check for PQLIB first.
AC_CHECK_LIB(pq,PQconnectdb,FOUND_PQLIB=1)
if test $FOUND_PQLIB ; then
        PQLIB="-lpq"
else
        echo PostgreSQL library not found in default library path.
        exit 0
fi

dnl Check for PQINCPATH
if test -d /usr/include/pgsql ; then
        pg_inc_dir="/usr/include/pgsql"
elif test -d /usr/include/postgresql ; then
        pg_inc_dir="/usr/include/postgresql"
elif test -d /usr/local/psql/include ; then
        pg_inc_dir="/usr/local/psql/include"
elif test -d /opt/psql/include ; then
        pg_inc_dir="/opt/psql/include"
else
        echo PostgreSQL includes directory not found!
        PQLIB=""
        exit 0
fi

dnl Check for libpq-fe.h
AC_CHECK_HEADERS("$pg_inc_dir/libpq-fe.h")
if test $HAVE_HEADER-LIBPQ-FE.H ; then
        PQINCPATH="-I$pg_inc_dir"
else
        echo PostgreSQL header libpq-fe.h not found!
        PQLIB=""
        exit 0
fi

])


PKG_CHECK_MODULES(GLIB, glib-2.0)
PKG_CHECK_MODULES(XML, [libxml-2.0 >= 2.5])
PKG_CHECK_MODULES(XSLT, [libxslt >= 1.1])
PKG_CHECK_MODULES(CHECK, [libcheck >= 0.9.6], [], 
  echo			 [
  echo "  Assuming that you have a locally compiled version of check"
  echo "  that incorporates marc's fixes.  If not, ask marc for a copy"
  CHECK_LIBS="`pwd`/test/libcheck.a"
])
POSTGRESQL_CHECKS





AC_CONFIG_FILES([Makefile.global])
AC_OUTPUT

